# jobs-scraper

./: .flake8  .gitignore  Dockerfile  README.md  flake.nix  pyproject.toml  pytest.ini  renovate.json  requirements.txt  setup.py
.github/workflows/: docker_image_build.yaml  test_coverage.yml
config/: gunicorn.conf.py
docs/: CODING_CONVENTIONS.md  RUNNING.md
requirements/: base.txt  dev.txt  requirements.base.txt  requirements.dev.txt  requirements.prod.txt  requirements.test.txt  test.txt
scripts/: run.py
src/jobscraper/: __init__.py  __main__.py  app.py  auth.py  config.py
tests/: conftest.py
tests/mocks/: jobspy.py
tests/unit/: test_app.py  test_auth.py  test_config.py
